--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>org.projectnessie</groupId>
     <artifactId>catalog-migration-tool</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -76,7 +76,7 @@
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <manifestEntries>
-                                <Main-Class>org.projectnessie.tool.CatalogMigrationCLI</Main-Class>
+                                <Main-Class>org.projectnessie.tools.catalog.migration.CatalogMigrationCLI</Main-Class>
                             </manifestEntries>
                         </transformer>
                     </transformers>
