--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -63,4 +63,5 @@ slf4j = { module = "org.slf4j:log4j-over-slf4j", version.ref = "slf4j" }
 [plugins]
 errorprone = { id = "net.ltgt.errorprone", version = "3.0.1" }
 nessie-run = { id = "org.projectnessie", version.ref = "nessieRunner" }
+nexus-publish-plugin = { id = "io.github.gradle-nexus.publish-plugin", version = "1.3.0" }
 shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadowPlugin" }
