--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,13 @@ jobs:
         with:
           submodules: 'true'
 
+      - name: Set up JDK 17 for Nessie integration tests
+        if: matrix.java-version != '17'
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 17
+
       - name: Set up JDK ${{ matrix.java-version }}
         uses: actions/setup-java@v4
         with:
@@ -28,6 +35,9 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
         with:
           arguments: --rerun-tasks assemble ${{ env.ADDITIONAL_GRADLE_OPTS }} check publishToMavenLocal --scan
+        # since the `nessieQuarkusApp` gradle plugin expects the below variable
+        env:
+          JDK17_HOME: ${{ env.JAVA_HOME_17_X64 }}
 
       - name: Capture test results
         uses: actions/upload-artifact@v4
