--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,18 +18,14 @@ jobs:
         with:
           submodules: 'true'
 
-      - name: Set up JDK 17 for Nessie integration tests
-        if: matrix.java-version != '17'
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: 17
-
-      - name: Set up JDK ${{ matrix.java-version }}
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: ${{ matrix.java-version }}
+          # JDK 17 is needed for `nessieQuarkusApp` to run the Nessie server.
+          java-version: |
+            17
+            ${{ matrix.java-version != '17' && matrix.java-version || '' }}
 
       - name: Build with Gradle
         uses: gradle/actions/setup-gradle@v3
